package sample;

public enum PlayerState {
    NO_ENEMY, PLAYING, PASSED, AGREEING;
}
