package server;

public class Field {
    private int x;
    private int y;
    private ColorEnum color;

    public Field(int x, int y, ColorEnum color){
        this.x = x;
        this.y = y;
        this.color = color;
    }

    public int getX() {
        return x;
    }

    public void setX(int x) {
        this.x = x;
    }

    public int getY() {
        return y;
    }

    public void setY(int y) {
        this.y = y;
    }

    public ColorEnum getColor() {
        return color;
    }

    public void setColor(ColorEnum color) {
        this.color = color;
    }

    public String toString(){
        return String.valueOf(getX()) + " " + String.valueOf(getY());
    }

}
