package server;

public enum GameState {
    BEFORE_START, MOVING, AGREEING
}
