@startuml

title __GOMA's Class Diagram__\n

  namespace client {
    class client.Client {
    }
  }
  

  namespace client {
    class client.Main {
    }
  }
  

  namespace client {
    class client.MainController {
    }
  }
  

  namespace client {
    namespace board {
      class client.board.Board {
      }
    }
  }
  

  namespace client {
    namespace board {
      abstract class client.board.BoardAbstract {
      }
    }
  }
  

  namespace client {
    namespace board {
      class client.board.Stone {
      }
    }
  }
  

  namespace client {
    namespace enums {
      enum ColorEnum {
      }
    }
  }
  

  namespace client {
    namespace enums {
      enum PlayerState {
      }
    }
  }
  

  namespace server {
    class server.Game {
    }
  }
  

  namespace server {
    class server.LogicController {
    }
  }
  

  namespace server {
    class server.Main {
    }
  }
  

  namespace server {
    class server.ProtocolServer {
    }
  }
  

  namespace server {
    class server.Server {
    }
  }
  

  namespace server {
    namespace board {
      class server.board.Board {
      }
    }
  }
  

  namespace server {
    namespace board {
      class server.board.Field {
      }
    }
  }
  

  namespace server {
    namespace board {
      class server.board.StoneGroup {
      }
    }
  }
  

  namespace server {
    namespace enums {
      enum ColorEnum {
      }
    }
  }
  

  namespace server {
    namespace enums {
      enum GameState {
      }
    }
  }
  

  namespace server {
    namespace player {
      class server.player.HumanPlayer {
      }
    }
  }
  

  namespace server {
    namespace player {
      abstract class server.player.Player {
      }
    }
  }
  

  client.Client o-- client.MainController : mainController
  client.Main -up-|> javafx.application.Application
  client.MainController o-- client.board.Board : board
  client.MainController o-- client.Client : client
  client.MainController o-- client.Main : main
  client.MainController o-- client.enums.ColorEnum : playerColor
  client.MainController o-- client.enums.PlayerState : state
  client.board.Board -up-|> client.board.BoardAbstract
  client.board.BoardAbstract -up-|> javafx.scene.Group
  client.board.Stone -up-|> javafx.scene.shape.Circle
  client.board.Stone o-- client.enums.ColorEnum : color
  server.Game o-- server.enums.GameState : gameState
  server.Game o-- server.LogicController : logicController
  server.LogicController o-- server.board.Field : koKilled
  server.LogicController o-- server.board.Field : koKiller
  server.LogicController o-- server.board.Board : board
  server.LogicController o-- server.enums.ColorEnum : currentPlayer
  server.board.Field o-- server.enums.ColorEnum : color
  server.board.StoneGroup o-- server.board.Board : board
  server.board.StoneGroup o-- server.enums.ColorEnum : color
  server.player.HumanPlayer -up-|> server.player.Player
  server.player.HumanPlayer o-- server.ProtocolServer : protocol
  server.player.Player o-- server.enums.ColorEnum : color


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
